add attack, defense and terrain effects.

--- a/.classpath
+++ b/.classpath
@@ -18,6 +18,7 @@
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry excluding="main/java/|main/resources/" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-21/">
 		<attributes>
 			<attribute name="module" value="true"/>
