--- a/build.gradle
+++ b/build.gradle
@@ -145,8 +145,8 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
     implementation "software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}"
-    implementation files('libs/JvmManipulator.jar')
-    implementation files('libs/CommonUtils.jar')
+    implementation files("libs/JvmManipulator.jar")
+    implementation files("libs/CommonUtils.jar")
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
