--- a/gradle.properties
+++ b/gradle.properties
@@ -34,7 +34,7 @@ mod_id=ba
 # The human-readable display name for the mod.
 mod_name=BlueArchive: Rendezvous
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=GPL v3
+mod_license=Commons Clause License with AGPL-3.0
 # The mod version. See https://semver.org/
 mod_version=1.0.0
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
