dynamically load jar library class

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ repositories {
 	        includeGroup('software.bernie.geckolib')
 	    }
     }
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 base {
