--- a/.classpath
+++ b/.classpath
@@ -18,8 +18,6 @@
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/CommonUtils"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Lyra"/>
 	<classpathentry kind="src" output="bin/main" path="src/generated/resources">
 		<attributes>
 			<attribute name="gradle_scope" value="main"/>
@@ -28,5 +26,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-21/"/>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Lyra"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Alpha-Lyr"/>
 	<classpathentry kind="output" path="bin/default"/>
 </classpath>
