confirm sky postprocess phase

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ repositories {
     }
     flatDir {
         dirs 'libs'
+        dirs 'ext'
     }
 }
 
@@ -152,6 +153,7 @@ dependencies {
     additionalRuntimeClasspath(implementation(files("libs/Alpha-Lyr.jar")))
     jarJar(files("libs/Lyra.jar"))
     jarJar(files("libs/Alpha-Lyr.jar"))
+    implementation files("ext/iris-neoforge-1.8.1+mc1.21.1.jar")
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
